--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
 </head>
 
 <body>
-    start
+    <div class="site-content">
+        <video autoplay muted loop id="heroVideo">
+            <source src="./assets/videos/cat.mp4" type="video/mp4" />
+        </video>
+    </div>
+
+    <div class="container">
+        <div class="nav">
+            <div class="logo">
+                <a href="#">Logo</a>
+            </div>
+            <div class="links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Projects</a>
+                <a href="#">History</a>
+                <a href="#">Career</a>
+                <a href="#">Contact</a>
+            </div>
+        </div>
+
+        <div class="hero-copy">
+            <h1>Freetime</h1>
+            <p>creative & modern frontend designs.</p>
+        </div>
+
+        <div class="footer">
+            <div class="links">
+                <a href="#">Instagram</a>
+                <a href="#">Youtube</a>
+            </div>
+
+            <div class="cta">
+                <a href="#">Showreel (2025)</a>
+            </div>
+        </div>
+    </div>
+
+    <canvas id="draw"></canvas>
 
     <script src="./assets/js/main.js"></script>
 </body>
